  * enh add a variable to enable IP check in the panel (broken), disabled by default
  * fix opendkim signing for mails submitted over the network
  * fix a LOT of bugs from Github: #128 #69 #116 #123 #126 #134 #139 #156 #173 #138
  * fix more BUGS from Github: #178 #159 #155 #176 #161 #162 #164 #165 #166 #170 #175 #177

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Wed,  7 Jun 2017 10:36:00 +0300

alternc (3.1.10) oldoldstable; urgency=low

  * fix not showing dropdown when installing second domain in some case. #28
  * fix password autocomplete fix for Firefox (HoneypotField) #27
  * fix underscore not allowed in the middle of a domain name #26
  * fix Cname not ending with . is now an error #25
  * fix Show a warning when creating a non-working email (not pop, not alias) #18

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Fri, 15 Jan 2016 15:26:00 +0100

alternc (3.1.9) oldoldstable; urgency=low

  * fix missing GLOBALS in various places
  * fix non-installed default_spf_value and default_dmarc_value in variables
  * fix restarting opendkim at each domain in update_domains instead of only once in the end
  * fix the infinite loop of inotify_do_actions.sh
  * enh added a (protected) message saying a file is write-protected
  * fix a HTML graphical bug when uncompression a tar.gz file
  * fix crating /etc/opendkim/TrustedHosts BEFORE searching in it
  * enh refactoring of the code using netbeans IDE auto-formatting + manual smoothing of class code
  * fix phpmyadmin sso not working when /etc/apache2/conf.d/phpmyadmin.conf is enabled

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Mon, 17 Nov 2015 14:29:16 +0100

alternc (3.1.8) oldoldstable; urgency=low

  * fix non-working levensthein call for checkPolicy, fixed using preg_split instead

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Mon,  3 Aug 2015 15:53:16 +0200

alternc (3.1.7) oldoldstable; urgency=low

  * fix added autocomplete="off" to password fields (not login form)